# ABCD-PHEWAS

./: .gitignore  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-data-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-statistical-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-UAT.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
python_pipeline/: __init__.py  cli.py  config.py  corrections.py  domains.py  models.py  parallel.py  preprocessing.py  utils.py  visualizations.py
python_pipeline/configs/: 1-s2.0-S088915912500145X-mmc1.xlsx  domain_crosscheck.csv  domains.yaml  example_run.yaml  phenotype_metadata.csv
python_pipeline/scripts/: build_phenotype_metadata.py
python_pipeline/tests/: test_corrections.py  test_domains.py  test_preprocessing.py
src/abcd_phewas/: __init__.py  config.py  correction.py  domain_mapper.py  effect_sizes.py  loader.py  pipeline.py  plotter.py  preprocessor.py  results_writer.py  stat_engine.py  type_detector.py
tests/: conftest.py  test_correction.py  test_domain_mapper.py  test_effect_sizes.py  test_loader.py  test_pipeline.py  test_plotter.py  test_preprocessor.py  test_results_writer.py  test_stat_engine.py  test_type_detector.py
(+9 files in other folders)
