[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abcd-phewas"
version = "0.1.0"
description = "PheWAS pipeline for ABCD Study pubertal trajectory clusters"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0,<2.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "adjustText>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abcd_phewas = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
